--- a/latex_thesis/bibliography/bibthesis.bib
+++ b/latex_thesis/bibliography/bibthesis.bib
@@ -4,6 +4,21 @@
   url =          {http://www.lorene.obspm.fr/},
 }
 
+@article{leclercGeodesicDeviationGravitational2006,
+  archivePrefix = {arXiv},
+  eprinttype = {arxiv},
+  eprint = {gr-qc/0605033},
+  title = {Geodesic Deviation and Gravitational Waves},
+  abstract = {The detection of gravitational waves based on the geodesic deviation equation is discussed. In particular, it is shown that the only non-vanishing components of the wave field in the conventional traceless-transverse gauge in linearized general relativity do not enter the geodesic deviation equation, and therefore, apparently, no effect is predicted by that equation in that specific gauge. The reason is traced back to the fact that the geodesic deviation equation is written in terms of a coordinate distance, which is not a directly measurable quantity. On the other hand, in the proper Lorentz frame of the detector, the conventional result described in standard textbooks holds.},
+  journal = {arXiv:gr-qc/0605033},
+  author = {Leclerc, M.},
+  month = may,
+  year = {2006},
+  keywords = {General Relativity and Quantum Cosmology},
+  file = {/Users/lorenzosperi/Zotero/storage/25VG2JCP/Leclerc - 2006 - Geodesic deviation and gravitational waves.pdf;/Users/lorenzosperi/Zotero/storage/5TFB5X4A/0605033.html}
+}
+
+
 @article{pasqualiNumericalSimulationsMerger,
   title = {Numerical {{Simulations}} of the {{Merger}} of {{Neutron Stars}}},
   language = {en},
